--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/META-INF/resources/metal/css/main.scss
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/META-INF/resources/metal/css/main.scss
@@ -2,6 +2,10 @@
 @import "./form-builder/form-builder";
 @import "./rule-builder/rule-builder";
 
+.ddm-btn-full button {
+	width: 100%;
+}
+
 .col-empty > p {
 	margin: 0;
 }
