--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/META-INF/resources/metal/css/form-builder/_form-builder.scss
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/META-INF/resources/metal/css/form-builder/_form-builder.scss
@@ -3,5 +3,6 @@
 @import "./field-types-panel";
 @import "./form-page";
 @import "./form-pagination";
+@import "./layout-builder";
 @import "./share_url_popover";
 @import "./sidebar";
